Dodaje zwiększanie ilości elementów na stronie tworzenia faktury, nie przesyła tego jeszcze do bazy

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,12 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
+//ogólne style
+
+.navbar-brand img {
+    height: 100% !important;
+}
+
 
 // poszerz kontener bootstrapa
 
