--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -64,6 +64,8 @@ body{
     background: #fff;
     border: 1px solid #eee;
     border-radius: 4px;
+    transition: .3s all;
+    opacity: 1;
 }
 .dash-content-main {
     margin-left: 300px;
@@ -85,6 +87,9 @@ body{
     /*margin-top: -1px;*/
 }
 
+.panel-body.faded {
+    opacity: 0;
+}
 /* >>----------> [ lista faktur ] <-----------<< */
 ul.invoices-list li {
     display: block;
@@ -97,11 +102,18 @@ ul.invoices-list {
 ul.invoices-list a {
     display: block;
     padding: 10px 0;
+    text-decoration: none;
+    transition: .3s all;
 }
 
+ul.invoices-list a:active {
+    color: rgba(0, 0, 0, 0.24);
+}
 ul.invoices-list small {
     display: block;
 }
+
+
 
 
 /* >>----------> [ bootstrap container wider ] <-----------<< */
