--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,11 +9,13 @@ body{
 	font-family: 'Montserrat', sans-serif;
     color: #8c8c8c;
     background: #f5f6fa;
+    padding-top: 51px;
 }
 /* >>----------> [ navbar ] <-----------<< */
 .navbar-default {
     background-color: #fff;
     border-color: #eee;
+    margin-bottom: 0;
 }
 .navbar-brand img {
     height: 100% !important;
@@ -30,10 +32,30 @@ body{
     font-weight: bold;
 }
 
+/* >>----------> [ transitions for vue  ] <-----------<< */
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to {
+    opacity: 0;
+}
+/* Enter and leave animations can use different */
+/* durations and timing functions.              */
+.slide-fade-enter-active {
+  transition: all .3s ease;
+}
+.slide-fade-leave-active {
+    display: none;
+}
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active below version 2.1.8 */ {
+  transform: translateY(-10px);
+  opacity: 0;
+}
 
 /* >>----------> [ dashboard layout ] <-----------<< */
 .dash-sidebar {
-    width: 300px;
+    width: 230px;
     position: fixed;
     left: 0;
     top: 0;
@@ -45,15 +67,15 @@ body{
     background: #fdfdfe;
 }
 .dash-content {
-    margin-left: 300px;
+    margin-left: 230px;
     padding-top: 110px;
 }
 .dash-content-sidebar {
     position: fixed;
-    width: 300px;
+    width: 370px;
     background: #fff;
     height: 100%;
-    padding: 20px;
+    padding: 0px;
 }
 .panel-body, .panel-heading, .panel-default {
     border: 0;
@@ -65,10 +87,12 @@ body{
     border: 1px solid #eee;
     border-radius: 4px;
     transition: .3s all;
-    opacity: 1;
+}
+.blurred{
+	filter: blur(4px);
 }
 .dash-content-main {
-    margin-left: 300px;
+    margin-left: 370px;
     padding: 20px;
 }
 .panel-default > .panel-heading {
@@ -87,9 +111,6 @@ body{
     /*margin-top: -1px;*/
 }
 
-.panel-body.faded {
-    opacity: 0;
-}
 /* >>----------> [ lista faktur ] <-----------<< */
 ul.invoices-list li {
     display: block;
@@ -101,11 +122,16 @@ ul.invoices-list {
 
 ul.invoices-list a {
     display: block;
-    padding: 10px 0;
+    padding: 20px 20px;
+    color: #444;
     text-decoration: none;
+    -webkit-transition: .3s all;
     transition: .3s all;
 }
-
+ul.invoices-list a.current{
+    color: #fff;
+    background: #4688ff;	
+}
 ul.invoices-list a:active {
     color: rgba(0, 0, 0, 0.24);
 }
