--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8508,7 +8508,7 @@ ul.invoices-list a {
   transition: .3s all;
 }
 
-ul.invoices-list a.current {
+ul.invoices-list .router-link-active {
   color: #fff;
   background: #4688ff;
 }
