--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -67,18 +67,17 @@ body{
 /* >>----------> [ dashboard layout ] <-----------<< */
 
 .dash-sidebar {
-  width: 230px;
-  position: fixed;
-  left: 0;
-  top: 0;
-  padding: 20px;
-  padding-top: 70px;
-  background: #fff;
-  height: 100%;
-  border-right: 1px solid rgba(112, 126, 140, 0.2);
-  background: #fdfdfe;
+    width: 230px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    padding: 20px;
+    top: 50px;
+    background: #fff;
+    height: 100%;
+    border-right: 1px solid rgba(112, 126, 140, 0.2);
+    background: #fdfdfe;
 }
-
 .dash-content {
   margin-left: 230px;
   padding-top: 60px;
@@ -109,8 +108,16 @@ body{
   border-radius: 4px;
   -webkit-transition: .3s all;
   transition: .6s all;
+  margin-top: 10px;
 }
-
+.messageDraft {
+    position: absolute;
+    top: 115px;
+    font-size: 16px;
+    right: 0;
+    padding-right: 25px;
+    /* text-transform: uppercase; */
+}
 .blured {
   -webkit-filter: blur(13px);
           filter: blur(13px);
@@ -143,6 +150,21 @@ h3.placeholder {
     font-size: 20px;
     font-weight: 100;
 }
+h3.placeholder a {
+    background-image: url(/images/icons/new-invoice.png);
+    background-repeat: no-repeat;
+    background-position: 10px center;
+    background-size: 26px;
+    line-height: 52px;
+    display: inline-block;
+    margin-left: 20px;
+    height: 50px;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 0 10px 0 44px;
+    background-color: #fff;
+    font-size: 15px;
+}
 .invoice-body {
     word-wrap: break-word;
 }
@@ -153,9 +175,12 @@ ul.invoices-list li {
 
 ul.invoices-list {
     padding: 0;
-    min-height: 101%;
+    /*min-height: 101%;*/
 }
-
+.invoices-list--placeholder {
+    padding: 30px 20px;
+    /* color: #707e93; */
+}
 ul.invoices-list a {
     display: block;
     padding: 13px 20px;
@@ -211,8 +236,50 @@ div#ascrail2000 {
     margin-left: 8px !important;
 }
 
+/* >>----------> [ left menu ] <-----------<< */
+ul.left-menu {
+    margin: 0;
+    padding: 5px 0px;
+}
 
-/* >>----------> [ single ivoice ] <-----------<< */
+ul.left-menu li {
+    display: block;
+}
+
+ul.left-menu li a {
+    display: block;
+    padding: 0 0 0 30px;
+    line-height: 40px;
+    position: relative;
+    text-decoration: none;
+    color: inherit;
+    transition: .3s all;
+}
+ul.left-menu li a img {
+    position: absolute;
+    left: 0;
+    height: 24px;
+    top: 8px;
+    transition: .3s all;
+}
+
+ul.left-menu li a:hover {
+    color: #FF9800;
+}
+
+ul.left-menu li a:hover
+ img {
+    opacity: .5;
+}
+
+ul.left-menu li a.router-link-exact-active {
+    color: #FF9800;
+}
+
+ul.left-menu li a.router-link-exact-active img {
+    opacity: .5;
+}
+/* >>----------> [ buttony ] <-----------<< */
 button#deleteInvoice {
     background: #a6a6a6;
     border: 0;
@@ -236,6 +303,37 @@ button#printToPDF {
     color: #fff;
     float: right;
     margin: 0 0 0 10px;
+}
+input#saveInvoice {
+    background: #4688ff;
+    border: 0;
+    padding: 10px 20px;
+    color: #fff;
+    float: right;
+    margin: 0 15 0 10px;
+}
+button.add-item {
+    background-image: url(/images/icons/add-item.png);
+    background-position: 18px center;
+    background-repeat: no-repeat;
+    background-size: 22px;
+    line-height: 40px;
+    margin-left: 7px;
+    padding-left: 45px;
+    padding-right: 20px;
+    background-color: rgb(237, 238, 242);
+    border: 0;
+}
+button.removeItemButton {
+    background-image: url(/images/icons/delete.png);
+    overflow: hidden;
+    text-indent: -999px;
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    border: 0;
+    background-position: center;
+    line-height: 26px;
 }
 /* >>----------> [ bootstrap container wider ] <-----------<< */
 
