--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -204,13 +204,22 @@ body,html{
     top: 50px;
   border-bottom: 1px solid rgba(112, 126, 140, 0.2);
   width: 100%;
+    width: calc( 100% - 230px );
   background: #fff;
   background: #fbfbfd;
   z-index: 1;
   line-height: 60px;
   /*margin-top: -1px;*/
 }
-
+.panel-default > .panel-heading > button {
+    /* float: right; */
+    position: absolute;
+    right: 0;
+    line-height: 60px;
+    margin: 0px;
+    font-size: 16px;
+    padding: 0px 50px;
+}
 h3.placeholder {
     text-align: center;
     margin: 30px 0;
@@ -310,6 +319,68 @@ ul.invoices-list a.router-link-active strong {
     color: #fff;
 }
 
+/* >>----------> [ items products dropdown ] <-----------<< */
+.items input[name="name"] {
+    width: 270px;
+    margin-right: 76px;
+}
+
+.items input {
+    line-height: 28px;
+    padding: 2px 5px;
+}
+
+.productInputContainer {
+    height: 36px;
+    position: relative;
+}
+
+.productInputContainer ul {
+    position: absolute;
+    top: 36px;
+    background: #222;
+    color: #fff;
+    left: 0px;
+    width: 305px;
+    padding: 0;
+    transition: .3s all;
+    margin: 0;
+    /*opacity: 0;*/
+    z-index: 1;
+    animation: fadein .3s;
+    max-height: 210px;
+    overflow: auto;
+}
+
+.productInputContainer ul li {
+    display: block;
+    padding: 10px 6px;
+    cursor: pointer;
+    transition: .3s all;
+}
+.productInputContainer ul li:hover {
+    color: #ff9800;
+}
+/*.productInputContainer ul.listOpened{
+  opacity: 1;
+}*/
+button.openList {
+    height: 36px;
+    width: 36px;
+    position: absolute;
+    left: 269px;
+    outline: 0;
+    border: 0;
+    font-size: 12px;
+    background: #edeef2;
+    border-color: darkgrey;
+    border-width: 1px 1px 1px 0;
+    border-style: solid;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 /* >>----------> [ scrollbar ] <-----------<< */  
 div#ascrail2000 {
     margin-left: 8px !important;
@@ -359,14 +430,7 @@ ul.left-menu li a.router-link-exact-active img {
     opacity: .5;
 }
 /* >>----------> [ buttony ] <-----------<< */
-button#deleteInvoice {
-    background: #a6a6a6;
-    border: 0;
-    padding: 10px 20px;
-    color: #fff;
-    float: right;
-    margin: 0 0 0 10px;
-}
+
 button#editInvoice {
     background: #FF9800;
     border: 0;
@@ -420,7 +484,38 @@ button#restoreInvoice {
     padding: 0;
     color: #4CAF50;
 }
-
+.deleteButton{
+    background: #a6a6a6;
+    border: 0;
+    padding: 10px 20px;
+    color: #fff;
+    float: right;
+    margin: 20px 5px 15px 10px;
+}
+.editButton {
+    background: #FF9800;
+    border: 0;
+    padding: 10px 20px;
+    color: #fff;
+    float: right;
+    margin: 20px 5px 15px 10px;
+}
+.saveButton {
+    background: #4688ff;
+    border: 0;
+    padding: 10px 20px;
+    color: #fff;
+    float: right;
+    margin: 20px 15px 15px 10px;
+}
+.updateButton {
+    background: #4CAF50;
+    border: 0;
+    padding: 10px 20px;
+    color: #fff;
+    float: right;
+    margin: 20px 15px 15px 10px;
+}
 /* >>----------> [ trash ] <-----------<< */
 .dash-content-main.dash-content-trash {
     margin-left: 0;
@@ -445,6 +540,27 @@ ul.invoices-list li.singleTrashItem div {
 table.invoices-list.table.table-striped thead {
     font-weight: 500;
 }
+
+/* >>----------> [ product ] <-----------<< */
+.products input[type="text"],.products input[type="number"] {
+    font-size: 20px;
+    display: block;
+    border: 1px solid #dedede;
+    padding: 10px;
+    outline: 0;
+    width: 100%;
+    color: #4688ff;
+    background: #edeef2;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.19); */
+}
+
+.products label.labelDefault {
+    margin: 30px 0 10px;
+    font-weight: 400;
+    color: #565656;
+}
+
+
 /* >>----------> [ dimmed ] <-----------<< */
 .panel-heading, .dash-content-sidebar, .dash-sidebar, .component-core, .messageDraft{
   transition: .3s all;
